--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,9 @@
             <ul>
                 <li><a href="/">main</a></li>
                 <!--<li><a href="/guide">guide</a></li>-->
+                <li><a href="/about-us">about us</a></li>
+                <li><a href="/contact-us">contact us</a></li>
+                <li><a href="/help">help</a></li>
             </ul>
         </nav>
         
@@ -45,3 +48,4 @@
 </body>
 
 </html>
+
