--- a/templates/help.html
+++ b/templates/help.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+{% block content %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -15,3 +18,5 @@
   </script>
 </body>
 </html>
+
+{% endblock %}
