Commented out Guide, about us and contact us

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,9 +25,9 @@
         <nav>
             <ul>
                 <li><a href="/">main</a></li>
-                <!--<li><a href="/guide">guide</a></li>-->
-                <li><a href="/about-us">about us</a></li>
-                <li><a href="/contact-us">contact us</a></li>
+                <!--<li><a href="/guide">guide</a></li> To remove -->
+                <!--<li><a href="/about-us">about us</a></li>To remove--> 
+                <!--<li><a href="/contact-us">contact us</a></li>To remove-->
                 <li><a href="/help">help</a></li>
             </ul>
         </nav>
