--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Byte Buggy Web Interface v0.500</title>
+    <title>Byte Buggy Web Interface</title>
     <link rel="stylesheet" type="text/css" href="static/css/main.css">
 
     <style> 
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <h1>Byte Buggy Web Interface v0.01</h1>
+        <h1>Byte Buggy Web Interface v0.7</h1>
 
         <nav>
             <ul>
