--- a/templates/main.html
+++ b/templates/main.html
@@ -33,6 +33,7 @@
         <select id="network-select" class ="button-transparent">
             <option>Select Network</option>
             <option>sample network option</option>
+            <option>sample network option 2</option>
         </select>
     </div>
 
