--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                 <!--<li><a href="/guide">guide</a></li> To remove -->
                 <!--<li><a href="/about-us">about us</a></li>To remove--> 
                 <!--<li><a href="/contact-us">contact us</a></li>To remove-->
-                <li><a href="/help">help</a></li>
+                <li><a href="/help">test</a></li>
             </ul>
         </nav>
         
