Revert "update handshake"
This reverts commit 57e1cf5de0c72000d0a1c806ec2936d782a8ea34.

--- a/byteBuggy/web/templates/main.html
+++ b/byteBuggy/web/templates/main.html
@@ -66,7 +66,7 @@
 
 <section class="log" style="flex: 1;">
     <h2>Terminal</h2>
-    <textarea id="log" readonly style = "width: 220%; height: 100%;">Welcome to the byteBuggy Web Interface.</textarea>
+    <textarea id="log" readonly style = "width: 220%; height: 100%;">Welcome to the Byte Buggy Web Interface.</textarea>
 
 </section>
 
